name:           gauge-test
version:        0.1.0.0
synopsis:       test
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

benchmark bench
  type: exitcode-stdio-1.0
  main-is: bench.hs
  hs-source-dirs:
      bench
  ghc-options: -O2 -threaded -rtsopts
  build-depends:
      base >=4.10 && <5
    , gauge
  default-language: Haskell2010
